# portal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  ROADMAP.md  com.portal.Portal.metainfo.xml  test_terminus.sh
.github/workflows/: release.yml
assets/: portal.desktop  portal.icns
examples/: test_viewport.rs
scripts/: build-dmg.sh  build-linux.sh  gen-icon.py  release.sh
src/: lib.rs  main.rs  main.rs.bak
src/app/: mod.rs  tab_management.rs  window_content.rs
src/config/: mod.rs  tests.rs
src/sftp/: browser.rs  local.rs  mod.rs  selection.rs  session.rs  task.rs  types.rs
src/ssh/: mod.rs  port_forward.rs  session.rs  tests.rs
src/terminal/: color.rs  grid.rs  mod.rs  session.rs  tests.rs  types.rs  unix_pty.rs  vte.rs  windows_pty.rs
src/ui/: fonts.rs  formatting.rs  hosts_view.rs  i18n.rs  input.rs  keychain_view.rs  mod.rs  pane.rs  pane_view.rs  settings_view.rs  sftp_view.rs  sftp_view.rs.bak  snippet_view.rs  terminal_render.rs  theme.rs  tokens.rs  tunnel_view.rs  types.rs  widgets.rs
src/ui/i18n/: en.rs  es.rs  fr.rs  ja.rs  ko.rs  mod.rs  ru.rs  zh.rs
src/ui/terminal/: mod.rs  render.rs  selection.rs  tests.rs
src/ui/types/: dialogs.rs  layout.rs  mod.rs  session.rs  sftp_types.rs
src/ui/views/: hosts_view.rs  keychain_view.rs  mod.rs  nav_panel.rs  settings_view.rs  sftp_view.rs  snippet_view.rs  snippets_view.rs  tab_view.rs  tunnel_view.rs  tunnels_view.rs
src/ui/views/sftp/: format.rs  mod.rs  panel.rs  progress.rs  types.rs
tests/: e2e_tests.rs  mock_ssh_server.rs
tests/common/: mod.rs
themes/: default.toml  nord.toml  solarized_dark.toml
