[package]
name = "portal"
version = "0.11.9"
edition = "2021"
description = "A modern terminal emulator with GUI"

[dependencies]
# GUI framework - egui for immediate mode rendering
eframe = { version = "0.29", features = ["default_fonts", "wgpu"] }
egui = "0.29"

# Animations
egui_animation = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# Terminal emulation
vte = "0.11"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }

# Clipboard
arboard = "3.4"

# File dialog
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Fonts
font-kit = "0.14"

# Colors and styling
syntect = "5.2"

# Unicode width detection (CJK double-width characters)
unicode-width = "0.2"

# SSH support
russh = "0.57"
russh-sftp = "2.1"

[target.'cfg(unix)'.dependencies]
pty = "0.2"
libc = "0.2"

[package.metadata.bundle]
name = "Portal"
identifier = "com.portal.app"
version = "0.11.9"
copyright = "Copyright © 2024 Portal"
category = "public.app-category.developer-tools"
short_description = "A modern terminal emulator with GUI"
osx_minimum_system_version = "12.0"
icon = ["assets/portal.icns"]

# Linux .deb package metadata
[package.metadata.deb]
maintainer = "Firstnsnd <you@example.com>"
copyright = "2024, Firstnsnd"
depends = "$auto, libvulkan1, mesa-vulkan-drivers | vulkan-drivers, libxkbcommon0, fontconfig"
section = "utils"
priority = "optional"
assets = [
    ["target/release/portal", "usr/bin/", "755"],
    ["assets/portal.desktop", "usr/share/applications/", "644"],
    ["assets/portal-icon-16.png", "usr/share/icons/hicolor/16x16/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-32.png", "usr/share/icons/hicolor/32x32/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-64.png", "usr/share/icons/hicolor/64x64/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-128.png", "usr/share/icons/hicolor/128x128/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-256.png", "usr/share/icons/hicolor/256x256/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-512.png", "usr/share/icons/hicolor/512x512/apps/com.portal.Portal.png", "644"],
    ["assets/portal-icon-1024.png", "usr/share/icons/hicolor/1024x1024/apps/com.portal.Portal.png", "644"],
]

# Linux .rpm package metadata
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/portal", dest = "/usr/bin/portal", mode = "0755" },
    { source = "assets/portal.desktop", dest = "/usr/share/applications/portal.desktop", mode = "0644" },
    { source = "assets/portal-icon-16.png", dest = "/usr/share/icons/hicolor/16x16/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-32.png", dest = "/usr/share/icons/hicolor/32x32/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-512.png", dest = "/usr/share/icons/hicolor/512x512/apps/portal.png", mode = "0644" },
    { source = "assets/portal-icon-1024.png", dest = "/usr/share/icons/hicolor/1024x1024/apps/portal.png", mode = "0644" },
]

[[bin]]
name = "portal"
path = "src/main.rs"
